services/paperless/resources/gotenberg.yml
apiVersion: v1
kind: Service
metadata:
  name: paperless-gotenberg
  labels:
    app.kubernetes.io/name: paperless-gotenberg
spec:
  selector:
    app.kubernetes.io/name: paperless-gotenberg
  ports:
  - name: gotenberg
    port: 3000
    protocol: TCP
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-gotenberg
  labels:
    app.kubernetes.io/name: paperless-gotenberg
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: paperless-gotenberg
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: paperless-gotenberg
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
                - key: kubernetes.io/arch
                  operator: In
                  values:
                    - amd64
      containers:
      - env:
        image: gotenberg/gotenberg
        imagePullPolicy: IfNotPresent
        name: gotenberg
        command:
        - "gotenberg"
        - "--chromium-disable-javascript=true"
        - "--chromium-allow-list=file:///tmp/.*"
        ports:
        - containerPort: 3000
          name: gotenberg
          protocol: TCP
        resources: {}
