services/paperless/resources/tika.yml
apiVersion: v1
kind: Service
metadata:
  name: paperless-tika
  labels:
    app.kubernetes.io/name: paperless-tika
spec:
  selector:
    app.kubernetes.io/name: paperless-tika
  ports:
  - name: tika
    port: 9998
    protocol: TCP
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-tika
  labels:
    app.kubernetes.io/name: paperless-tika
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: paperless-tika
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: paperless-tika
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
                - key: kubernetes.io/arch
                  operator: In
                  values:
                    - amd64
      containers:
      - env:
        image: apache/tika
        imagePullPolicy: IfNotPresent
        name: tika
        ports:
        - containerPort: 9998
          name: tika
          protocol: TCP
        resources:
          limits:
            memory: 1Gi
          requests:
            cpu: 25m
            memory: 1Gi
