services/paperless/resources/valkey.yml
apiVersion: v1
kind: Service
metadata:
  name: paperless-valkey
  labels:
    app.kubernetes.io/name: paperless-valkey
spec:
  selector:
    app.kubernetes.io/name: paperless-valkey
  ports:
  - name: valkey
    port: 6379
    protocol: TCP
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-valkey
  labels:
    app.kubernetes.io/name: paperless-valkey
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: paperless-valkey
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: paperless-valkey
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
                - key: kubernetes.io/arch
                  operator: In
                  values:
                    - amd64
      containers:
      - env:
        image: public.ecr.aws/valkey/valkey
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - valkey-cli ping | grep PONG
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: main
        ports:
        - containerPort: 6379
          name: valkey
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - valkey-cli ping | grep PONG
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources: {}
        startupProbe:
          exec:
            command:
            - sh
            - -c
            - valkey-cli ping | grep PONG
          failureThreshold: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /data
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: paperless-valkey-storage
