services/paperless/resources/backend-traffic-policy.yml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: paperless-auth-redirect
  namespace: paperless
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: paperless
  responseOverride:
  - match:
      statusCodes:
      - type: Value
        value: 302
    response:
      statusCode: 302
      body:
        type: Inline
        inline: "Redirecting to login..."
      headers:
      - name: Location
        value: "https://auth.k8s.cguertin.dev/oauth2/start?rd=https://classeur.cguertin.dev/"
