services/paperless/resources/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless
  namespace: paperless
spec:
  hostnames:
  - classeur.cguertin.dev
  parentRefs:
  - name: envoy-gateway
    namespace: envoy-gateway-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: paperless
      port: 8000
